tests/fixtures/invalid/dict_gt_dict.py
# Cannot compare with > Dict[str, int] and Dict[str, int]
x: bool = {"a": 1} > {"a": 1}
